@startuml bbdd
allow_mixing
set separator none
top to bottom direction
    package bbdd{
        enum Database{
            MARIADB, MOCK
        }

       interface TranferDAWDAO {
            +listar(): List<Temporada>

            +insertar(jugador: Jugador): void
            +modificar(jugador: Jugador): void
            +eliminar(idJugador: int): void
            +listar(): List<Jugador>
            +visualiarJugador(int idJugador);

            +insertar(equipo: Equipo): void
            +modificar(equipo: Equipo): void
            +eliminar(idEquipo: int): void
            +listar(): List<Equipo>
            +viusalizarEquipo(int idEquipo);

            +insertar(competicion: Competicion): void
            +modificar(competicion: Competicion): void
            +eliminar(idCompeticion: int): void
            +listar(): List<Competicion>
            +viusalizarCompeticion(int idCompeticion);

            +insertar(equipoCompeticion: EquipoCompeticion): void
            +modificar(equipoCompeticion: EquipoCompeticion): void
            +eliminar(equipoId: int, competicionId: int, temporadaId: int): void
            +listar(): List<EquipoCompeticion>
            +viusalizarEquipoCompeticion(int equipoId, int temporadaId, int competicionId);

            +insertar(contrato: Contrato): void
            +modificar(contrato: Contrato): void
            +eliminar(idContrato: int): void
            +listar(): List<Contrato>
            +viusalizarContrato(int idContrato);

            +insertar(estadisticasTemporada: EstadisticasTemporada): void
            +modificar(estadisticasTemporada: EstadisticasTemporada): void
            +eliminar(jugadorId: int, temporadaId: int, competicionId: int, equipoId: int): void
            +listar(): List<EstadisticasTemporada>
            +obtenerPorTemporadaYJugador(jugadorId: int, temporadaId: int): List<EstadisticasTemporada>
            +buscarPorJugador(id_jugador: int): List<EstadisticasTemporada>


            +insertar(traspaso: Traspaso): void
            +modificar(traspaso: Traspaso): void
            +eliminar(idTraspaso: int): void
            +listar(): List<Traspaso>
            +viusalizarTraspaso(int idTraspaso);

            +insertar(valorMercadoHistorial: ValorMercadoHistorial): void
            +modificar(valorMercadoHistorial: ValorMercadoHistorial): void
            +eliminar(idHistorial: int): void
            +listar(): List<ValorMercadoHistorial>
            +viusalizarValorMercadoHistorial(int idValorMercadoHistorial);

            +insertar(usuario: Usuario): int 

            +obtenerIdPorNombreJugador(nombre: String): int
            +obtenerIdPorNombreEquipo(nombre: String): int
            +obtenerIdPorNombreCompeticion(nombre: String): int
            +obtenerIdPorNombreTemporada(nombre: String): int
            +buscarUsuario(nombre: String, contraseña: String): Usuario
            +obtenerEstadisticas(jugadorId: int, temporadaId: int, competicionId: int, equipoId: int): EstadisticasTemporada
           
        }

        class TransferDAWDBFactory{
            {static} obtener(d:Database): TransferDAWDAO
        }

        abstract TransferDAWDAOImp {       

        }

        class TransferDAOImpMock{

        }

        class TransferDAOImpMariaDB{
            
        }
           
    }

    component org.mariadb.jdbc <<JDBC driver>>

    TransferDAOImpMariaDB ..> org.mariadb.jdbc
    TransferDAWDAOImp <|-- TransferDAOImpMariaDB
    TransferDAWDAOImp..|> TransferDAWDAO
    TransferDAOImpMock..|> TransferDAWDAO 
    
@enduml